[gd_scene load_steps=18 format=3 uid="uid://bhyhorfj2vi50"]

[ext_resource type="Script" path="res://scenes/chest.gd" id="1_4mprs"]
[ext_resource type="Texture2D" uid="uid://de68e7ugjgl6e" path="res://assets/Sprout Lands - Sprites - Basic pack/Objects/Chest.png" id="1_22mtv"]
[ext_resource type="AudioStream" uid="uid://ceuugrfn6tvb2" path="res://assets/audio/wood-chest-slid3-90317.mp3" id="3_wrr7g"]

[sub_resource type="AtlasTexture" id="AtlasTexture_d3qv2"]
atlas = ExtResource("1_22mtv")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_8a5lc"]
atlas = ExtResource("1_22mtv")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_03tn7"]
atlas = ExtResource("1_22mtv")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_uu0xf"]
atlas = ExtResource("1_22mtv")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_7sadk"]
atlas = ExtResource("1_22mtv")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_v7bof"]
atlas = ExtResource("1_22mtv")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_liex1"]
atlas = ExtResource("1_22mtv")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_gmn1g"]
atlas = ExtResource("1_22mtv")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_y6gwd"]
atlas = ExtResource("1_22mtv")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_iejed"]
atlas = ExtResource("1_22mtv")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_pbogr"]
atlas = ExtResource("1_22mtv")
region = Rect2(192, 0, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_qg01g"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_d3qv2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8a5lc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_03tn7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uu0xf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7sadk")
}],
"loop": false,
"name": &"chest_close",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_v7bof")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_liex1")
}],
"loop": true,
"name": &"chest_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gmn1g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y6gwd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iejed")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pbogr")
}],
"loop": false,
"name": &"chest_open",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tpuo8"]
size = Vector2(18, 12)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vilbi"]
size = Vector2(26, 16)

[node name="Chest" type="StaticBody2D"]
script = ExtResource("1_4mprs")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_qg01g")
animation = &"chest_close"
frame = 4
frame_progress = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 2)
shape = SubResource("RectangleShape2D_tpuo8")

[node name="ChestArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ChestArea"]
shape = SubResource("RectangleShape2D_vilbi")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_wrr7g")

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="body_entered" from="ChestArea" to="." method="_on_chest_area_body_entered"]
[connection signal="body_exited" from="ChestArea" to="." method="_on_chest_area_body_exited"]
